trunk/Code/crisp/src/main/java/crisp/pddl/PddlParser.java
/* Generated By:JavaCC: Do not edit this line. PddlParser.java */
package crisp.pddl;

import crisp.planningproblem.*;
import crisp.planningproblem.goal.*;
import crisp.planningproblem.effect.*;

import de.saar.chorus.term.*;

import java.io.*;
import java.util.*;

public class PddlParser implements PddlParserConstants {
        private Domain domain;
        private Problem problem;

        public PddlParser(Domain domain, Problem problem) {
                this((Reader) null);

            this.domain = domain;
            this.problem = problem;

            domain.clear();
            problem.clear();
        }

        public static void parse(File domainReader, Domain domain, File problemReader, Problem problem)
        throws ParseException, FileNotFoundException
        {
                parse(new FileReader(domainReader), domain, new FileReader(problemReader), problem);
        }


        public static void parse(Reader domainReader, Domain domain, Reader problemReader, Problem problem)
        throws ParseException
        {
                PddlParser parser = new PddlParser(domain, problem);

                parser.ReInit(domainReader);
                parser.Domain();

                parser.ReInit(problemReader);
                parser.Problem();

                problem.addEqualityLiterals();
        }

/***** DOMAIN ******/
  final public void Domain() throws ParseException {
        Token t;
    jj_consume_token(OPENBRACE);
    jj_consume_token(DEFINE);
    jj_consume_token(OPENBRACE);
    jj_consume_token(DOMAIN);
    t = jj_consume_token(NAME);
    jj_consume_token(CLOSEBRACE);
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_2(2)) {
        Requirements();
      } else if (jj_2_3(2)) {
        Types();
      } else if (jj_2_4(2)) {
        Constants();
      } else if (jj_2_5(2)) {
        Predicates();
      } else if (jj_2_6(2)) {
        Action();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(CLOSEBRACE);
                domain.setName(t.image);
  }

  final public void Requirements() throws ParseException {
  Token t;
    jj_consume_token(OPENBRACE);
    jj_consume_token(REQUIREMENTS);
    label_2:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_2;
      }
      t = jj_consume_token(REQUIREMENT);
                             domain.addRequirement(t.image);
    }
    jj_consume_token(CLOSEBRACE);
  }

  final public void Types() throws ParseException {
        TypedNameList types;
    jj_consume_token(OPENBRACE);
    jj_consume_token(TYPES);
    types = TypedNameList();
    jj_consume_token(CLOSEBRACE);
                for( String type : types.getItems() ) {
                        domain.addSubtype(type, types.getType(type));
                }
  }

  final public void Constants() throws ParseException {
        TypedNameList constants;
    jj_consume_token(OPENBRACE);
    jj_consume_token(CONSTANTS);
    constants = TypedNameList();
    jj_consume_token(CLOSEBRACE);
                for( String constant : constants.getItems() ) {
                        domain.addConstant(constant, constants.getType(constant));
                }
  }

  final public void Predicates() throws ParseException {
    jj_consume_token(OPENBRACE);
    jj_consume_token(PREDICATES);
    label_3:
    while (true) {
      Predicate();
      if (jj_2_8(2)) {
        ;
      } else {
        break label_3;
      }
    }
    jj_consume_token(CLOSEBRACE);
  }

  final public void Predicate() throws ParseException {
        Predicate pred = new Predicate();
        TypedVariableList arguments = new TypedVariableList();
        Token t;
    jj_consume_token(OPENBRACE);
    t = jj_consume_token(NAME);
                       pred.setLabel(t.image);
    arguments = TypedVarList();
    jj_consume_token(CLOSEBRACE);
                for( Variable arg : arguments.getItems() ) {
                        pred.addVariable( arg, arguments.getType(arg) );
                }

                domain.addPredicate(pred);
  }

  final public void Action() throws ParseException {
        Token t;
        Predicate pred = new Predicate();
        Goal precondition = new crisp.planningproblem.goal.Conjunction();
        Effect effect = new crisp.planningproblem.effect.Conjunction();
    jj_consume_token(OPENBRACE);
    jj_consume_token(ACTION);
    t = jj_consume_token(NAME);
                                          pred.setLabel(t.image);
    label_4:
    while (true) {
      if (jj_2_9(2)) {
        ;
      } else {
        break label_4;
      }
      if (jj_2_10(2)) {
        ActionParameters(pred);
      } else if (jj_2_11(2)) {
        jj_consume_token(PRECONDITION);
        precondition = ActionPrecondition();
      } else if (jj_2_12(2)) {
        jj_consume_token(EFFECT);
        effect = ActionEffect();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(CLOSEBRACE);
                Action a = new Action(pred, precondition, effect);
                domain.addAction(a);
  }

  final public void ActionParameters(Predicate pred) throws ParseException {
        TypedVariableList parameters = new TypedVariableList();
    jj_consume_token(PARAMETERS);
    jj_consume_token(OPENBRACE);
    parameters = TypedVarList();
    jj_consume_token(CLOSEBRACE);
                for( Variable parameter : parameters.getItems() ) {
                        pred.addVariable(parameter, parameters.getType(parameter));
                }
  }

  final public Goal ActionPrecondition() throws ParseException {
        Goal sub;
        List<Goal> conjuncts = new ArrayList<Goal>();
        Term term;

        TypedVariableList variables = new TypedVariableList();
    if (jj_2_14(2)) {
      jj_consume_token(OPENBRACE);
      jj_consume_token(AND);
      label_5:
      while (true) {
        if (jj_2_13(2)) {
          ;
        } else {
          break label_5;
        }
        sub = ActionPrecondition();
                                                        conjuncts.add(sub);
      }
      jj_consume_token(CLOSEBRACE);
           Collections.reverse(conjuncts);
           {if (true) return new crisp.planningproblem.goal.Conjunction(conjuncts);}
    } else if (jj_2_15(2)) {
      term = Atom();
           {if (true) return new crisp.planningproblem.goal.Literal(term, true);}
    } else if (jj_2_16(2)) {
      jj_consume_token(OPENBRACE);
      jj_consume_token(NOT);
      sub = ActionPrecondition();
      jj_consume_token(CLOSEBRACE);
           if( sub instanceof crisp.planningproblem.goal.Literal ) {
                 Term t = ((crisp.planningproblem.goal.Literal) sub).getAtom();
                 {if (true) return new crisp.planningproblem.goal.Literal(t, false);}
           } else {
                 {if (true) return new crisp.planningproblem.goal.Negation(sub);}
           }
    } else if (jj_2_17(2)) {
      jj_consume_token(OPENBRACE);
      jj_consume_token(FORALL);
      jj_consume_token(OPENBRACE);
      variables = TypedVarList();
      jj_consume_token(CLOSEBRACE);
      sub = ActionPrecondition();
      jj_consume_token(CLOSEBRACE);
           {if (true) return new crisp.planningproblem.goal.Universal(variables, sub);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Effect ActionEffect() throws ParseException {
        Effect sub;
        List<Effect> conjuncts = new ArrayList<Effect>();
        Term term;

        TypedVariableList variables = new TypedVariableList();
        Goal condition;
    if (jj_2_19(2)) {
      jj_consume_token(OPENBRACE);
      jj_consume_token(AND);
      label_6:
      while (true) {
        if (jj_2_18(2)) {
          ;
        } else {
          break label_6;
        }
        sub = ActionEffect();
                                                  conjuncts.add(sub);
      }
      jj_consume_token(CLOSEBRACE);
           {if (true) return new crisp.planningproblem.effect.Conjunction(conjuncts);}
    } else if (jj_2_20(2)) {
      term = Atom();
           {if (true) return new crisp.planningproblem.effect.Literal(term, true);}
    } else if (jj_2_21(2)) {
      jj_consume_token(OPENBRACE);
      jj_consume_token(NOT);
      term = Atom();
      jj_consume_token(CLOSEBRACE);
           {if (true) return new crisp.planningproblem.effect.Literal(term, false);}
    } else if (jj_2_22(2)) {
      jj_consume_token(OPENBRACE);
      jj_consume_token(FORALL);
      jj_consume_token(OPENBRACE);
      variables = TypedVarList();
      jj_consume_token(CLOSEBRACE);
      sub = ActionEffect();
      jj_consume_token(CLOSEBRACE);
           {if (true) return new crisp.planningproblem.effect.Universal(variables, sub);}
    } else if (jj_2_23(2)) {
      jj_consume_token(OPENBRACE);
      jj_consume_token(WHEN);
      condition = ActionPrecondition();
      sub = ActionEffect();
      jj_consume_token(CLOSEBRACE);
            {if (true) return new crisp.planningproblem.effect.Conditional(condition, sub);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/******* PROBLEM ************/
  final public void Problem() throws ParseException {
        Token t;
    jj_consume_token(OPENBRACE);
    jj_consume_token(DEFINE);
    jj_consume_token(OPENBRACE);
    jj_consume_token(PROBLEM);
    t = jj_consume_token(NAME);
                                                                problem.setName(t.image);
    jj_consume_token(CLOSEBRACE);
    ProblemDomain();
    if (jj_2_24(2)) {
      ProblemObjects();
    } else {
      ;
    }
    ProblemInit();
    ProblemGoal();
    jj_consume_token(CLOSEBRACE);
  }

  final public void ProblemDomain() throws ParseException {
        Token t;
    jj_consume_token(OPENBRACE);
    jj_consume_token(DOMAIN_TAG);
    t = jj_consume_token(NAME);
                                              problem.setDomain(t.image);
    jj_consume_token(CLOSEBRACE);
  }

  final public void ProblemObjects() throws ParseException {
        TypedNameList constants;
    jj_consume_token(OPENBRACE);
    jj_consume_token(OBJECT);
    constants = TypedNameList();
    jj_consume_token(CLOSEBRACE);
                for( String constant : constants.getItems() ) {
                        domain.addConstant(constant, constants.getType(constant));
                }
  }

  final public void ProblemInit() throws ParseException {
        Term t;
    jj_consume_token(OPENBRACE);
    jj_consume_token(INIT);
    label_7:
    while (true) {
      if (jj_2_25(2)) {
        ;
      } else {
        break label_7;
      }
      t = Atom();
                      problem.addToInitialState(t);
    }
    jj_consume_token(CLOSEBRACE);
  }

  final public void ProblemGoal() throws ParseException {
        Goal g;
    jj_consume_token(OPENBRACE);
    jj_consume_token(GOAL);
    g = ActionPrecondition();
                                   problem.setGoal(g);
    jj_consume_token(CLOSEBRACE);
  }

/****** UTILITY NONTERMINALS *******/
  final public Term Atom() throws ParseException {
        Token t,v,x,y;
        List<Term> subterms = new ArrayList<Term>();
        Term t1, t2;
    if (jj_2_29(2)) {
      jj_consume_token(OPENBRACE);
      t = jj_consume_token(NAME);
      label_8:
      while (true) {
        if (jj_2_26(2)) {
          ;
        } else {
          break label_8;
        }
        if (jj_2_27(2)) {
          v = jj_consume_token(VAR);
                     subterms.add(new Variable(v.image));
        } else if (jj_2_28(2)) {
          v = jj_consume_token(NAME);
                           subterms.add(new Constant(v.image));
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(CLOSEBRACE);
                {if (true) return new Compound(t.image, subterms);}
    } else if (jj_2_30(2)) {
      jj_consume_token(OPENBRACE);
      jj_consume_token(EQ);
      t1 = Term();
      t2 = Term();
      jj_consume_token(CLOSEBRACE);
                subterms.add(t1);
                subterms.add(t2);
                {if (true) return new Compound("**equals**", subterms);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Term Term() throws ParseException {
        Token t;
    if (jj_2_31(2)) {
      t = jj_consume_token(VAR);
                    {if (true) return new Variable(t.image);}
    } else if (jj_2_32(2)) {
      t = jj_consume_token(NAME);
                       {if (true) return new Constant(t.image);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public TypedVariableList TypedVarList() throws ParseException {
        List<Variable> variables = new ArrayList<Variable>();
        Token t, v, type_tok = null;
        String type;
        TypedVariableList ret = new TypedVariableList();
    label_9:
    while (true) {
      if (jj_2_33(2)) {
        ;
      } else {
        break label_9;
      }
      label_10:
      while (true) {
        v = jj_consume_token(VAR);
                      variables.add(new Variable(v.image));
        if (jj_2_34(2)) {
          ;
        } else {
          break label_10;
        }
      }
      if (jj_2_35(2)) {
        jj_consume_token(DASH);
        type_tok = jj_consume_token(NAME);
      } else {
        ;
      }
                if( type_tok == null ) {
                        type = TypeHierarchy.TOP;
                } else {
                        type = type_tok.image;
                }

                for( Variable variable : variables ) {
                        ret.addItem(variable, type);
                }

                variables.clear();
                type_tok = null;
    }
                {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public TypedNameList TypedNameList() throws ParseException {
        List<String> names = new ArrayList<String>();
        Token t, v, type_tok = null;
        String type;
        TypedNameList ret = new TypedNameList();
    label_11:
    while (true) {
      if (jj_2_36(2)) {
        ;
      } else {
        break label_11;
      }
      label_12:
      while (true) {
        v = jj_consume_token(NAME);
                       names.add(v.image);
        if (jj_2_37(2)) {
          ;
        } else {
          break label_12;
        }
      }
      if (jj_2_38(2)) {
        jj_consume_token(DASH);
        type_tok = jj_consume_token(NAME);
      } else {
        ;
      }
                if( type_tok == null ) {
                        type = TypeHierarchy.TOP;
                } else {
                        type = type_tok.image;
                }

                for( String variable : names ) {
                        ret.addItem(variable, type);
                }

                names.clear();
                type_tok = null;
    }
                {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  final private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  final private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  final private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  final private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }
